[tool.poetry]
name = "rabitflask"
version = "0.1.0"
description = "Frontend Flask"
authors = ["safrizal <safrizal@loratechai.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
Flask = "1.1.2"
Flask-Migrate = "2.5.3"
Flask-Script = "2.0.6"
Flask-Cors = "3.0.9"
requests = "^2.28.1"
pika = "^1.3.0"
flask-restx = "0.5.0"
Werkzeug = "1.0.1"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.41"
flask-sqlalchemy = "2.5.0"
Jinja2 = "3.0.3"
itsdangerous = "2.0.1"
psycopg2-binary = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
